--- a/layouts/partials/projects.html
+++ b/layouts/partials/projects.html
@@ -1,7 +1,7 @@
 <h2 class="mt-8 text-2xl font-extrabold mb-10"> Our projects </h2>
-
+{{ $projects := site.GetPage "projects" }}
 <section class="w-full grid gap-4 sm:grid-cols-2 md:grid-cols-3">
-	{{ range where .Site.RegularPages "Section" "projects" }}
+ {{ range $projects.Sections }}
 		{{ partial "article-link/card.html" . }}
   {{ end }}
 </section>
