--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -4889,6 +4889,10 @@ pre {
     grid-template-columns:repeat(3, minmax(0, 1fr))
   }
 
+  .md\:flex-col {
+    flex-direction:column
+  }
+
   .md\:justify-start {
     justify-content:flex-start
   }
