--- a/layouts/shortcodes/authorCard.html
+++ b/layouts/shortcodes/authorCard.html
@@ -18,7 +18,7 @@
   <li>
     <div class="flex justify-start">
       <div class="block p-6 rounded-lg shadow-2xl min-w-full ml-6 mb-10 break-words">
-        <div class="flex justify-stretch content-center">
+        <div class="flex flex-col justify-stretch content-center">
             <div class="m-0 flex-1 ">
                 <div class="flex justify-center">
                         {{ with $authorData.image }}
